<resources>
    <string name="app_name">Horse challenge</string>

    <string name="title">Horse challenge</string>
    <string name="level">Level</string>
    <string name="moves">Moves</string>
    <string name="time">Time</string>
    <string name="lives">Lives</string>
    <string name="options">Options</string>
    <string name="instructions">Move the horse over board to complete all cells.</string>
    <string name="credits">Game created by martincitooo</string>

    <string name="premium">Tap here to remove ads, get more levels and unlimited lives</string>
    <string name="premiumTitle">Get premium access forever</string>
    <string name="premiumBenefit1">No more adds</string>
    <string name="premiumBenefit2">Unlimited lives</string>
    <string name="premiumBenefit3">Keep your reached level</string>
    <string name="pay">PAY ONLY $1 NOW</string>

</resources>